@@ -1,26 +1,0 @@
-<?php
-
-$settings = array();
-
-$tmp = array(
-	'media_source' => array(
-		'xtype' => 'modx-combo-source',
-		'value' => '',
-	),
-);
-
-foreach ($tmp as $k => $v) {
-	/* @var modSystemSetting $setting */
-	$setting = $modx->newObject('modSystemSetting');
-	$setting->fromArray(array_merge(
-		array(
-			'key' => PKG_NAME_LOWER.'.'.$k,
-			'namespace' => PKG_NAME_LOWER,
-		), $v
-	),'',true,true);
-
-	$settings[] = $setting;
-}
-
-unset($tmp);
-return $settings;
