@@ -1,39 +1,3 @@
-Ext.BLANK_IMAGE_URL = '/assets/components/bannery/img/_blank.png'
-
-Ext.ux.Image = Ext.extend(Ext.Component, {
-	url  : Ext.BLANK_IMAGE_URL  //for initial src value
-	,autoEl: {
-		tag: 'img'
-		,src: Ext.BLANK_IMAGE_URL
-		,cls: 'tng-managed-image'
-		,width: 'auto'
-		,height: 100
-	}
-//  Add our custom processing to the onRender phase.
-//  We add a ‘load’ listener to our element.
-	,onRender: function() {
-		Ext.ux.Image.superclass.onRender.apply(this, arguments);
-		this.el.on('load', this.onLoad, this);
-		if(this.url){
-			this.setSrc(this.url);
-		}
-	}
-	,onLoad: function() {
-		this.fireEvent('load', this);
-	}
-	,setSrc: function(src) {
-		if(src == '' || src == undefined) {
-			this.el.dom.src = Ext.BLANK_IMAGE_URL;
-			Ext.getCmp('currimg').hide();
-		}
-		else {
-			this.el.dom.src = MODx.config.connectors_url+'system/phpthumb.php?&src='+src+'&wctx=mgr&h=100&zc=0&source='+Bannery.config.media_source;
-			Ext.getCmp('currimg').show();
-		}
-	}
-});
-Ext.reg('image', Ext.ux.Image);
-
 Bannery.grid.Ads = function(config) {
 	config = config || {};
 	this.exp = new Ext.grid.RowExpander({
@@ -45,7 +9,7 @@ Bannery.grid.Ads = function(config) {
 		id: 'bannery-grid-ads'
 		,url: Bannery.config.connectorUrl
 		,baseParams: { action: 'mgr/ads/getlist' }
-		,fields: ['id','name', 'url', 'image', 'active', 'positions', 'clicks', 'description']
+		,fields: ['id','name', 'url', 'image', 'current_image', 'active', 'positions', 'clicks', 'description']
 		,paging: true
 		,border: false
 		,frame: false
@@ -59,7 +23,7 @@ Bannery.grid.Ads = function(config) {
 			,{header: _('bannery.ads.url'),dataIndex: 'url',sortable: true}
 			,{header: _('bannery.ads.clicks'),dataIndex: 'clicks',sortable: false}
 			,{header: _('bannery.ads.active'),dataIndex: 'active',sortable: true, renderer: this.renderBoolean}
-			,{header: _('bannery.ads.image'),dataIndex: 'image',sortable: false,renderer: {fn:function(img) {return renderGridImage(img,30)}}}
+			,{header: _('bannery.ads.image'),dataIndex: 'current_image',sortable: false,renderer: {fn:function(img) {return renderGridImage(img,30)}}}
 			,{header: _('bannery.ads.description'),dataIndex: 'description',sortable: false, hidden: true}
 		]
 		,tbar: [{
@@ -93,30 +57,30 @@ Bannery.grid.Ads = function(config) {
 		}
 	});
 
-    //positions store/array for checkboxes in add/update window
-    Bannery.positionsArray = new Array();
-    Bannery.posStore = new Ext.data.JsonStore({
-       url: Bannery.config.connectorUrl
-      ,root: 'results'
-      ,baseParams: { action: 'mgr/positions/getlist', limit : 0 }
-      ,fields: ["id", "name"]
-      ,autoLoad: true
-      ,listeners: {
-          load: function(t, records, options) {
-				Bannery.positionsArray = new Array;
+	//positions store/array for checkboxes in add/update window
+	Bannery.positionsArray = [];
+	Bannery.posStore = new Ext.data.JsonStore({
+	url: Bannery.config.connectorUrl
+		,root: 'results'
+		,baseParams: { action: 'mgr/positions/getlist', limit : 0 }
+		,fields: ["id", "name"]
+		,autoLoad: true
+		,listeners: {
+			load: function(t, records, options) {
+				Bannery.positionsArray = [];
 				for (var i=0; i<records.length; i++) {
 					Bannery.positionsArray.push({name: "positions[]", inputValue: records[i].data.id, boxLabel: records[i].data.name});
 				}
-          }
-      }
-    });
+			}
+		}
+	});
 
-    Bannery.grid.Ads.superclass.constructor.call(this,config);
+	Bannery.grid.Ads.superclass.constructor.call(this,config);
 };
 Ext.extend(Bannery.grid.Ads,MODx.grid.Grid,{
 	getMenu: function(grid,idx) {
 		var row = grid.store.data.items[idx]
-		var m = new Array;
+		var m = [];
 		if (row.data.active == 0) {
 			m.push({text: _('bannery.ads.enable'),handler: this.enableAd});
 		}
@@ -162,9 +126,9 @@ Ext.extend(Bannery.grid.Ads,MODx.grid.Grid,{
 			xtype: 'bannery-window-ad'
 			,update: 0
 			,openTo: '/'
-            ,baseParams: {
-                action: 'mgr/ads/create'
-            }
+			,baseParams: {
+				action: 'mgr/ads/create'
+			}
 			,listeners: {
 				'success': {fn:this.refresh,scope:this}
 				,'hide': {fn:function() {this.getEl().remove()}}
@@ -193,7 +157,7 @@ Ext.extend(Bannery.grid.Ads,MODx.grid.Grid,{
 				openTo = tmp.substr(1)
 			}
 		}
-		
+
 		MODx.Ajax.request({
 			url: Bannery.config.connectorUrl
 			,params: {
@@ -218,8 +182,8 @@ Ext.extend(Bannery.grid.Ads,MODx.grid.Grid,{
 					w.setTitle(_('bannery.ads.update')).show(e.target,function() {w.setPosition(null,50)},this);
 					Ext.getCmp('bannery-window-ad').reset();
 					Ext.getCmp('bannery-window-ad').setValues(record);
+					Ext.getCmp('currimg').setSrc(record.current_image);
 					this.enablePositions(record.positions);
-					Ext.getCmp('currimg').setSrc(record.image);
 				},scope:this}
 			}
 		});
@@ -317,12 +281,11 @@ Bannery.window.Ad = function(config) {
 							,border: false
 							,layout: 'form'
 							,items: [{
-								xtype: 'bannery-filter-resources'
-								,fieldLabel: _('bannery.ads.url')
-								,name: 'url'
-								,description: _('bannery.ads.url.description')
-								,anchor: '99%'
-								,allowBlank: true
+								xtype: 'modx-combo-source'
+								,fieldLabel: _('bannery.ads.source')
+								,id: 'modx-combo-source'
+								,name: 'source'
+								,anchor: '100%'
 							}]
 						},{
 							columnWidth: .2
@@ -333,31 +296,38 @@ Bannery.window.Ad = function(config) {
 								,fieldLabel: _('bannery.ads.active')
 								,name: 'active'
 								,inputValue: 1
+								,checked: !config.update
 							}]
 						}]
 					}]
 				}]
 			},{
-				id: 'currimg'
-				,fieldLabel: _('bannery.ads.image.current')
-				,xtype: 'image'
-			},{
-				xtype: 'modx-combo-browser'
+				xtype: 'modx-combo-adbrowser'
 				,fieldLabel: config.update ? '' : _('bannery.ads.image.new')
 				,name: 'newimage'
-				,source: Bannery.config.media_source
 				,hideFiles: true
 				,anchor: '99%'
 				,allowBlank: true
 				,openTo: config.openTo || '/'
 				,listeners: {
-					'select': {
+					select: {
 						fn:function(data) {
-							Ext.getCmp('currimg').setSrc(data.relativeUrl);
+							Ext.getCmp('currimg').setSrc(data.fullRelativeUrl);
 							Ext.getCmp('image').setValue(data.relativeUrl);
 						}
 					}
 				}
+			},{
+				id: 'currimg'
+				,fieldLabel: _('bannery.ads.image.current')
+				,xtype: 'image'
+			},{
+				xtype: 'bannery-filter-resources'
+				,fieldLabel: _('bannery.ads.url')
+				,name: 'url'
+				,description: _('bannery.ads.url.description')
+				,anchor: '100%'
+				,allowBlank: true
 			},{
 				xtype: 'textarea'
 				,fieldLabel: _('bannery.ads.description')
