@@ -27,6 +27,7 @@ $_lang['bannery.ads.enable'] = 'Включить баннер';
 $_lang['bannery.ads.disable'] = 'Выключить баннер';
 $_lang['bannery.ads.add'] = 'Добавить баннер';
 $_lang['bannery.ads.error.ns'] = 'Не указан баннер';
+$_lang['bannery.ads.source'] = 'Источник медиа';
 
 $_lang['bannery.positions'] = 'Позиции';
 $_lang['bannery.positions.name'] = 'Название';
@@ -55,6 +56,3 @@ $_lang['bannery.stats.today'] = 'Сегодня';
 $_lang['bannery.stats.overall'] = 'За все время';
 
 $_lang['bannery.error.no_positions'] = 'Вы должны создать хотя бы одну позицию для размещения баннеров.';
-
-$_lang['setting_bannery.media_source'] = 'Источник файлов';
-$_lang['setting_bannery.media_source_desc'] = 'Источник файлов для изображений баннеров';
