@@ -4,6 +4,8 @@ Changelog for BannerY.
 ============
 - Improved builder.
 - Added russian lexicon with snippet parameters.
+- Added property "source" in object byAd. Now you can select separate media sources for each ad.
+- Removed system setting "bannery.media_source".
 
 1.1.0 beta (15.07.2013)
 ============
